Fix package.json info

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "keywords": [],
   "author": "pixeldasher",
-  "license": "AGPLv3",
+  "license": "AGPL3",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
